fix overflow issues on homepage

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -19,6 +19,8 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
   scroll-behavior: smooth;
+  background-color: #ffffff;
+  /* animation-play-state: paused; */
 }
 
 @layer utilities {
